@@ -1247,6 +1247,16 @@
          "cjerdonek"
       ]
    },
+   "Chris Lord" : {
+      "emails" : [
+          "clord@igalia.com",
+          "chris@igalia.com",
+          "contact@chrislord.net"
+      ],
+      "nicks" : [
+          "cwiiis"
+      ]
+   },
    "Chris Marrin" : {
       "emails" : [
          "cmarrin@apple.com"
