@@ -1,3 +1,12 @@
+2020-03-19  Chris Lord  <clord@igalia.com>
+
+        Add Chris Lord (clord@igalia.com) to the list of contributors
+        https://bugs.webkit.org/show_bug.cgi?id=209274
+
+        Unreviewed
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2020-03-19  Ryan Haddad  <ryanhaddad@apple.com>
 
         Remove commit queue bubble from bot watchers dashboard
